--- a/compose.yaml
+++ b/compose.yaml
@@ -21,4 +21,6 @@ services:
       resources:
         reservations:
           devices:
-            - capabilities: ["gpu"]
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
